--- a/Basics/Básicos.ipynb
+++ b/Basics/Básicos.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,10 +143,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "manzana\n",
+      "pera\n",
+      "cereza\n",
+      "naranja\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declaración de una lista\n",
+    "frutas = [\"manzana\", \"banana\", \"cereza\"]\n",
+    "\n",
+    "# Acceder a elementos\n",
+    "primera_fruta = frutas[0]    # manzana (índice 0)\n",
+    "\n",
+    "# Modificar elementos\n",
+    "frutas[1] = \"pera\"           # Cambia \"banana\" por \"pera\"\n",
+    "\n",
+    "# Añadir elementos\n",
+    "frutas.append(\"naranja\")     # Añade al final de la lista\n",
+    "\n",
+    "# Recorrer una lista\n",
+    "for fruta in frutas:\n",
+    "    print(fruta)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,10 +255,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma es: 15\n",
+      "0 1 2 3 4 Índice 0: manzana\n",
+      "Índice 1: pera\n",
+      "Índice 2: plátano\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterar sobre una lista\n",
+    "numeros = [1, 2, 3, 4, 5]\n",
+    "suma = 0\n",
+    "for numero in numeros:\n",
+    "    suma += numero\n",
+    "print(f\"La suma es: {suma}\")  # 15\n",
+    "\n",
+    "# Iterar sobre un rango\n",
+    "for i in range(5):  # range(5) genera [0, 1, 2, 3, 4]\n",
+    "    print(i, end=\" \")  # 0 1 2 3 4\n",
+    "\n",
+    "# Iterar con índices usando enumerate\n",
+    "frutas = [\"manzana\", \"pera\", \"plátano\"]\n",
+    "for indice, fruta in enumerate(frutas):\n",
+    "    print(f\"Índice {indice}: {fruta}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,10 +343,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insuficiente\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejemplo: Clasificación de notas\n",
+    "nota = int(input(\"Introduce la nota (0-100): \"))\n",
+    "\n",
+    "if nota >= 90:\n",
+    "    print(\"Sobresaliente\")\n",
+    "elif nota >= 80:\n",
+    "    print(\"Notable\")\n",
+    "elif nota >= 70:\n",
+    "    print(\"Bien\")\n",
+    "elif nota >= 60:\n",
+    "    print(\"Suficiente\")\n",
+    "else:\n",
+    "    print(\"Insuficiente\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -402,10 +478,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Hola, Ana!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definición de una función simple\n",
+    "def saludar(nombre):\n",
+    "    \"\"\"Esta función saluda a la persona pasada como parámetro\"\"\"\n",
+    "    return f\"¡Hola, {nombre}!\"\n",
+    "\n",
+    "# Llamada a la función\n",
+    "mensaje = saludar(\"Ana\")\n",
+    "print(mensaje)  # ¡Hola, Ana!"
+   ]
   }
  ],
  "metadata": {
@@ -424,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
