--- a/Numeros_Errores/Representación_númerica.ipynb
+++ b/Numeros_Errores/Representación_númerica.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,13 +14,12 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "59LjeNztv9vm"
+      },
       "source": [
         "# Introducción a las Bases Numéricas\n",
-        "---\n",
-        "### Profesor: Juan Marcos Marín\n",
-        "*Métodos Computacionales 2024-2*\n",
         "\n",
-        "---\n",
         "\n",
         "\n",
         "Las bases numéricas son sistemas para representar números. Las tres bases más comunes en informática son:\n",
@@ -75,13 +60,13 @@
         "  13   |   1101   |   D          \n",
         "  14   |   1110   |   E          \n",
         "  15   |   1111   |   F  "
-      ],
-      "metadata": {
-        "id": "59LjeNztv9vm"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "FQYwt2T11tXz"
+      },
       "source": [
         "## Definición de Bit y Byte\n",
         "\n",
@@ -106,17 +91,11 @@
         "  $$2^{32} = 4,294,967,295$$\n",
         "  - Para enteros con signo (signed), permite representar valores desde `-2,147,483,648` hasta `2,147,483,647`.\n",
         "  $$\\frac{2^{32} -1}{2} =  \\pm 2,147,483,647$$\n"
-      ],
-      "metadata": {
-        "id": "FQYwt2T11tXz"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(2**32)\n",
-        "print('±' + str(round((2**32-1)/2)))"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,37 +103,37 @@
         "id": "G7KalAqy4QNd",
         "outputId": "bdd31925-5658-4a5b-e836-fc5d542cc23b"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "4294967296\n",
             "±2147483648\n"
           ]
         }
+      ],
+      "source": [
+        "print(2**32)\n",
+        "print('±' + str(round((2**32-1)/2)))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "L8HUpdl74Qnq"
+      },
       "source": [
         "- **64 bits**:\n",
         "  - En la representación de 64 bits, se utilizan 64 bits para representar un número.\n",
         "  - Un número representado en 64 bits puede tener 2^64 combinaciones diferentes, lo que equivale a **18,446,744,073,709,551,616** valores posibles.\n",
         "  - Para números enteros sin signo (unsigned), esto permite representar valores desde `0` hasta **18,446,744,073,709,551,615**.\n",
         "  - Para enteros con signo (signed), los valores posibles van desde `-9,223,372,036,854,775,808` hasta `9,223,372,036,854,775,807`.\n"
-      ],
-      "metadata": {
-        "id": "L8HUpdl74Qnq"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(2**64)\n",
-        "print('±' + str(round((2**64-1)/2)))"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -162,20 +141,26 @@
         "id": "9edoGKZ85O5Q",
         "outputId": "1bbe4188-cf2a-41e1-abfc-828ef4f2e435"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "18446744073709551616\n",
             "±9223372036854775808\n"
           ]
         }
+      ],
+      "source": [
+        "print(2**64)\n",
+        "print('±' + str(round((2**64-1)/2)))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "K9oqAnDmwV5j"
+      },
       "source": [
         "# Conversión de Decimal a Binario\n",
         "\n",
@@ -217,17 +202,11 @@
         "\\end{align*}$$\n",
         "\n",
         "Esta fórmula demuestra cómo cada posición en un número binario representa una potencia de 2, y la suma de estas potencias da el valor decimal equivalente."
-      ],
-      "metadata": {
-        "id": "K9oqAnDmwV5j"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(bin(42))\n",
-        "print('0b está relacionado a que el número es binario')"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -235,20 +214,26 @@
         "id": "aUSV53WH5kAT",
         "outputId": "bdcb8e8a-c963-437f-c138-b38b245b11cd"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0b101010\n",
             "0b está relacionado a que el número es binario\n"
           ]
         }
+      ],
+      "source": [
+        "print(bin(42))\n",
+        "print('0b está relacionado a que el número es binario')"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "J0pdolqI0hew"
+      },
       "source": [
         "# Conversión Simple de Punto Flotante a Binario\n",
         "\n",
@@ -282,13 +267,13 @@
         "- El proceso para la parte fraccionaria se detiene cuando llegamos a 0 o cuando empezamos a repetir (para números periódicos).\n",
         "\n",
         "Esta representación es directa y fácil de entender, aunque no es tan precisa o estandarizada como el formato IEEE 754 (ver siguiente sección) para su uso en computadoras."
-      ],
-      "metadata": {
-        "id": "J0pdolqI0hew"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tC9Z0as3zohV"
+      },
       "source": [
         "# Representación Binaria de Números Flotantes (IEEE 754)\n",
         "\n",
@@ -366,13 +351,13 @@
         "`1 10000010 10001100000000000000000`\n",
         "\n",
         "![image](https://www.puntoflotante.net/IEEE-754-ENGLISH.jpg)"
-      ],
-      "metadata": {
-        "id": "tC9Z0as3zohV"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "SnJSsnsu9JK0"
+      },
       "source": [
         "## Ejemplo de un Número Flotante con Precisión Doble (64 bits)\n",
         "\n",
@@ -416,13 +401,13 @@
         "`1 10000000010 1000110000000000000000000000000000000000000000000000`\n",
         "\n",
         "![](https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/IEEE_754_Double_Floating_Point_Format.svg/2560px-IEEE_754_Double_Floating_Point_Format.svg.png)"
-      ],
-      "metadata": {
-        "id": "SnJSsnsu9JK0"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Jc2Jo7SkH0hW"
+      },
       "source": [
         "## Recuperar el valor original\n",
         "\n",
@@ -445,40 +430,40 @@
         "     $$-1.546875 \\times 2^3 = -12.375$$.\n",
         "\n",
         "Por lo tanto, el valor original recuperado de la representación binaria es **-12.375**.\n"
-      ],
-      "metadata": {
-        "id": "Jc2Jo7SkH0hW"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oolxm7UYIRxV",
+        "outputId": "76018a83-50af-4815-9168-264b3b9e3859"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El número será: -12.375\n"
+          ]
+        }
+      ],
       "source": [
         "s = (-1)**1\n",
         "e = int(0b10000000010) - 1023\n",
         "m = (1*2**(-1)) + (1*2**(-5)) + (1*2**(-6))\n",
         "r = s * (1 + m) * 2**e\n",
         "print(f'El número será: {r}')"
-      ],
-      "metadata": {
-        "id": "oolxm7UYIRxV",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "76018a83-50af-4815-9168-264b3b9e3859"
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "El número será: -12.375\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dKQoacKB8uyg"
+      },
       "source": [
         "\n",
         "## Tipos de Precisión en IEEE 754\n",
@@ -493,10 +478,30 @@
         "   - 11 bits para el exponente.\n",
         "   - 52 bits para la mantisa.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "dKQoacKB8uyg"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
