--- a/Librerias/Actividad02_Librerias.ipynb
+++ b/Librerias/Actividad02_Librerias.ipynb
@@ -124,7 +124,7 @@
         "# Read the HTML content\n",
         "html_content = pd.read_html(url)\n",
         "\n",
-        "alturas = html_content[2]\n",
+        "alturas = html_content[0]\n",
         "\n",
         "# Dataset 2\n",
         "# URL of the webpage\n",
@@ -136,11 +136,11 @@
         "income = html_content[0]\n",
         "````\n",
         "\n",
-        "El primer dataset muestra las alturas medias de niñ@s de 5, 10, 15 y 19 años.\n",
+        "El primer dataset muestra las alturas medias de niñ@s de 19 años.\n",
         "\n",
         "a. Limpie los datos, eliminando columnas en *(in)* y cambie todos los nombres de las columnas al español.\n",
         "\n",
-        "b. Realice un gráfico de barras, donde se muestre una comparación de la estatura media para niños y niñas en ambas categorias. Esto para los primeros 10 paises con mayor y menor altura, además agregue a Colombia.\n",
+        "b. Realice un gráfico de barras, donde se muestre una comparación de la estatura media para niños (cm) y niñas (cm) en ambas categorias. Esto para los primeros 10 paises con mayor y menor altura, además agregue a Colombia.\n",
         "\n",
         "c. ¿Existirá una relación entre la riqueza y la altura? Usando el dataset `income`, haga un merge con el dataset `alturas`. Ahora, empleando los datos de altura para los 10 mayores (19 años) y 10 menores (19 años). Realice un gráfico donde relacione la altura media con el GDP y concluya si existe alguna relación.\n"
       ],
