--- a/Labs/Laboratorio_1.ipynb
+++ b/Labs/Laboratorio_1.ipynb
@@ -227,9 +227,15 @@
     "Un proyectil es lanzado desde una altura inicial $y_0 = 0$ con una velocidad inicial de $4.0\\, \\text{m/s}$ a $45^\\circ$ respecto a la horizontal. Graficar la trayectoria del proyectil en su plano de movimiento (considerando el eje $x$ paralelo a la horizontal y el origen en la posición inicial del proyectil) desde el punto de lanzamiento hasta el punto donde impacta el suelo (asumiendo un terreno plano). La gráfica debe incluir etiquetas en los ejes y un título. Recuerde que las ecuaciones del movimiento parabólico están dadas por\n",
     "\n",
     "$$\n",
-    "\\text{Posición horizontal:} \\quad x(t) = v_{0x} t = v_0 \\cos\\theta \\cdot t \\\\\n",
-    "\\text{Posición vertical:} \\quad y(t) = y_0 + v_{0y} t - \\frac{1}{2}gt^2 = y_0 + v_0 \\sin\\theta \\cdot t - \\frac{1}{2}gt^2 \\\\\n",
-    "\\text{Velocidad horizontal:} \\quad v_x(t) = v_{0x} =v_0 \\cos \\theta= \\text{constante} \\\\\n",
+    "\\text{Posición horizontal:} \\quad x(t) = v_{0x} t = v_0 \\cos\\theta \\cdot t \n",
+    "$$\n",
+    "$$\n",
+    "\\text{Posición vertical:} \\quad y(t) = y_0 + v_{0y} t - \\frac{1}{2}gt^2 = y_0 + v_0 \\sin\\theta \\cdot t - \\frac{1}{2}gt^2 \n",
+    "$$\n",
+    "$$\n",
+    "\\text{Velocidad horizontal:} \\quad v_x(t) = v_{0x} =v_0 \\cos \\theta= \\text{constante} \n",
+    "$$\n",
+    "$$\n",
     "\\text{Velocidad vertical:} \\quad v_y(t) = v_{0y} - gt = v_0 \\sin\\theta - gt\n",
     "$$"
    ]
