--- a/Labs/Laboratorio_1.ipynb
+++ b/Labs/Laboratorio_1.ipynb
@@ -5,7 +5,7 @@
    "id": "a205c519",
    "metadata": {},
    "source": [
-    "# Laboratorio 05: Puthon Básico, Librerias y Modelamiento Básico.\n",
+    "# Laboratorio 1: Python Básico, Librerias y Modelamiento Básico.\n",
     "\n",
     "---\n",
     "### Profesor: Daniel Ruiz Mejía\n",
