Archivos Cálculo Numérico

--- a/Labs/Laboratorio_4.ipynb
+++ b/Labs/Laboratorio_4.ipynb
@@ -118,7 +118,7 @@
     "voltaje = np.array([0.45244, 0.10592, -0.19918, -0.46988, -0.71167, -0.92896])  # Salida del puente (V)\n",
     "```\n",
     "\n",
-    "Un termómetro de resistencia de platino estándar de 100 $\\Omega$ tiene una resistencia de 139.27 $\\Omega$ a $100^\\circ$ C. Utilice el método de interpolación que desee para estimar el voltaje de salida del puente en estas condiciones. Si la salida del puente se mide en 0 voltios, estime la resistencia medida. ¿Qué conclusión puede obtener?"
+    "Un termómetro de resistencia de platino estándar de 100 $\\Omega$ tiene una resistencia de 139.27 $\\Omega$ a $100^\\circ$ C. Utilice el método de interpolación que desee para estimar el voltaje de salida del puente en estas condiciones. Si la salida del puente se mide en 0 voltios, estime la resistencia medida"
    ]
   },
   {
