--- a/Labs/Laboratorio_5.ipynb
+++ b/Labs/Laboratorio_5.ipynb
@@ -67,7 +67,7 @@
     "x = np.array([0, 225, 383, 623, 742, 993])  # Distancia recorrida en m\n",
     "```\n",
     "\n",
-    "- Determinar la velocidad instantanea para cada uno de los tiempo y distancias mostrados.\n",
+    "- Determinar la velocidad instantanea para cada uno de los tiempos y distancias mostrados.\n",
     "\n",
     "- ¿Cuál será la velocidad para $t=12$?\n",
     "\n",
@@ -223,7 +223,7 @@
     "    - Simpson\n",
     "    - Cuadratura\n",
     "    \n",
-    "Garantizando que el error sea mejor a $\\varepsilon = 10^{-6}$\n",
+    "Garantizando que el error sea menor a $\\varepsilon = 10^{-6}$\n",
     "- Calcule la integral radial desde $r=0$ hasta $+\\infty$, verifique que la probabilidad total sea 1.\n",
     "\n"
    ]
